--- a/.github/workflows/format.yaml
+++ b/.github/workflows/format.yaml
@@ -1,31 +1,26 @@
-name: Format Check
+name: Code Style Check
 
 on:
   push:
-    branches: [master]
   pull_request:
 
 jobs:
   check:
-    name: Lint & Format Check
     runs-on: ubuntu-latest
 
     steps:
-    - name: 📥 Checkout code
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
-    - name: 🐍 Set up Python
-      uses: actions/setup-python@v4
+    - uses: actions/setup-python@v4
       with:
         python-version: "3.10"
 
-    - name: 📦 Install Ruff & Black
+    - name: Install Ruff & Black
       run: |
-        python -m pip install --upgrade pip
         pip install ruff black
 
-    - name: ✅ Ruff Lint Check
+    - name: Ruff Check
       run: ruff check src
 
-    - name: ✅ Black Format Check
+    - name: Black Check
       run: black --check src
