--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,6 +4,9 @@ on:
   release:
     types: [created]
 
+permissions:
+  contents: write
+
 jobs:
   release:
     runs-on: windows-latest
@@ -15,7 +18,7 @@ jobs:
       with:
         python-version: "3.10"
 
-    - name: Install deps
+    - name: Install dependencies
       run: |
         pip install -r requirements.txt
         pip install pyinstaller
@@ -29,17 +32,27 @@ jobs:
           --workpath build `
           --specpath build
 
-    - name: Zip EXE
+    - name: Zip EXE and Docs
       run: |
         Compress-Archive -Path dist\LANCryptor.exe, README.md, LICENSE -DestinationPath LANCryptor-win.zip
 
-    - name: Upload to GitHub Release
-      uses: softprops/action-gh-release@v1
+    - name: Create GitHub Release
+      id: create_release
+      uses: actions/create-release@v1
       with:
-        files: LANCryptor-win.zip
-        token: ${{ secrets.GH_PAT }}
+        tag_name: ${{ github.ref_name }}
+        release_name: Release ${{ github.ref_name }}
+        draft: false
+        prerelease: false
+      env:
+        GITHUB_TOKEN: ${{ secrets.GH_PAT }}
 
-    - name: Upload to GitHub Release
-      uses: softprops/action-gh-release@v1
+    - name: Upload Release Asset
+      uses: actions/upload-release-asset@v1
       with:
-        files: LANCryptor-win.zip
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./LANCryptor-win.zip
+        asset_name: LANCryptor-win.zip
+        asset_content_type: application/zip
+      env:
+        GITHUB_TOKEN: ${{ secrets.GH_PAT }}
