--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,6 +24,7 @@ jobs:
         pip install pyinstaller
 
     - name: Build EXE
+      shell: pwsh
       run: |
         pyinstaller src/main.py `
           --name LANCryptor `
@@ -33,27 +34,14 @@ jobs:
           --specpath build
 
     - name: Zip EXE and Docs
-      run: |
-        Compress-Archive -Path dist\LANCryptor.exe, README.md, LICENSE -DestinationPath LANCryptor-win.zip
+      shell: pwsh
+      run: Compress-Archive -Path dist\LANCryptor.exe, README.md, LICENSE -DestinationPath LANCryptor-win.zip
 
-    - name: Create GitHub Release
-      id: create_release
-      uses: actions/create-release@v1
+    - name: Create or update GitHub Release and upload asset
+      uses: softprops/action-gh-release@v1
       with:
         tag_name: ${{ github.ref_name }}
-        release_name: Release ${{ github.ref_name }}
-        draft: false
-        prerelease: false
-        allowUpdates: true
-      env:
-        GITHUB_TOKEN: ${{ secrets.GH_PAT }}
-
-    - name: Upload Release Asset
-      uses: actions/upload-release-asset@v1
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./LANCryptor-win.zip
-        asset_name: LANCryptor-win.zip
-        asset_content_type: application/zip
+        name: Release ${{ github.ref_name }}
+        files: LANCryptor-win.zip
       env:
         GITHUB_TOKEN: ${{ secrets.GH_PAT }}
