--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,6 +29,7 @@ jobs:
         pyinstaller src/main.py `
           --name LANCryptor `
           --onefile `
+          --noconsole `
           --distpath dist `
           --workpath build `
           --specpath build
