--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,4 +34,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: LANCryptor-win
-        path: LANCryptor-win.zip
+        path: |
+          dist/LANCryptor.exe
+          README.md
+          LICENSE
