Added tray and notifications, updated workflows, modifyed README.md

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,9 +30,11 @@ jobs:
           --name LANCryptor `
           --onefile `
           --noconsole `
+          --add-data "assets;assets" `
           --distpath dist `
           --workpath build `
-          --specpath build
+          --specpath build `
+          --icon=assets/tray.ico
 
     - name: Prepare release folder
       shell: pwsh
