--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,9 +26,11 @@ jobs:
           --name LANCryptor `
           --onefile `
           --noconsole `
+          --add-data "assets;assets" `
           --distpath dist `
           --workpath build `
-          --specpath build
+          --specpath build `
+          --icon=assets/tray.ico
 
     - name: Prepare release folder
       run: |
