--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,8 @@ jobs:
         pip install -r requirements.txt
         pip install pyinstaller
 
-    - name: Build EXE
+    - name: Build EXE with PyInstaller
+      working-directory: ${{ github.workspace }}
       run: |
         pyinstaller src/main.py `
           --name LANCryptor `
@@ -31,6 +32,8 @@ jobs:
           --workpath build `
           --specpath build `
           --icon=assets/tray.ico
+      shell: pwsh
+
 
     - name: Prepare release folder
       run: |
