--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -34,7 +34,7 @@ jobs:
           --distpath dist `
           --workpath build `
           --specpath build `
-          --icon=assets/tray.ico
+          --icon=../assets/tray.ico
       shell: pwsh
 
 
