--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,11 @@ jobs:
         echo "clean_version=$short" >> $env:GITHUB_ENV
       shell: pwsh
 
+    - name: Ensure release folder exists
+      run: |
+        New-Item -ItemType Directory -Force -Path release
+      shell: pwsh
+
     - name: Build NSIS installer
       run: |
         makensis /DPRODUCT_VERSION=${{ env.clean_version }} installer_script.nsi
