--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,8 +25,13 @@ jobs:
 
     - name: Add NSIS to PATH
       run: |
-        $nsisPath = (Get-ChildItem "C:\Program Files*" -Recurse -Filter makensis.exe | Select-Object -First 1).DirectoryName
-        echo "NSIS path = $nsisPath"
+        $nsisExe = Get-ChildItem "C:\Program Files (x86)\NSIS\makensis.exe" -ErrorAction SilentlyContinue
+        if (-not $nsisExe) {
+            # fallback just in case
+            $nsisExe = Get-ChildItem "C:\Program Files*\NSIS\makensis.exe" -Recurse | Select-Object -First 1
+        }
+        $nsisPath = $nsisExe.DirectoryName
+        echo "Found NSIS at: $nsisPath"
         echo "$nsisPath" >> $env:GITHUB_PATH
       shell: pwsh
 
